# kit

./: .gitignore  .pre-commit-config.yaml  .pre-commit.yaml.jinja  CLAUDE.md  README.md  copier.yml  flake.nix  flake.nix.jinja  pyproject.toml.jinja  treefmt.nix.jinja
config/: storage.yaml.jinja
templates/: .envrc.jinja  .pre-commit-config.yaml.jinja  CLAUDE.md.jinja  copier.yml  flake.nix.jinja  process-compose.yaml.jinja  pyproject.toml.jinja
templates/config/: logging.yaml.jinja  template.yaml.jinja  web.yaml.jinja
templates/migrations/: script.py.mako.jinja
templates/{{ module_name }}/cli/: example.py.jinja  schema.py.jinja  web.py.jinja
templates/{{ module_name }}/lib/: cli.py.jinja  json.py.jinja  sheets.py.jinja
tests/: answers.yml
tests/fixture/: .copier-answers.yml  .eslintrc.json  .gitignore  .pre-commit-config.yaml  .pre-commit.yaml  flake.nix  process-compose.yaml  pyproject.toml
tests/fixture/config/: logging.yaml  storage.yaml  template.yaml
tests/fixture/migrations/: script.py.mako
tests/fixture/testproject/cli/: __main__.py  example.py  schema.py  web.py
tests/fixture/testproject/cli/script/: __init__.py
tests/fixture/testproject/core/: __init__.py  di.py
tests/fixture/testproject/core/config/: __init__.py  base.py  logging.py  secrets.py  settings.py  source.py  web.py
tests/fixture/testproject/core/container/: __init__.py  storage.py  template.py  testproject.py
tests/fixture/testproject/lib/: cli.py  json.py  sheets.py
tests/fixture/testproject/lib/logging/: extra.py  json.py
tests/fixture/testproject/lib/sql/: enum.py  session.py  util.py
tests/fixture/testproject/model/: base.py
tests/fixture/testproject/storage/: __init__.py  example.py  table.py  type.py
tests/fixture/testproject/web/example/: main.py
tests/fixture/testproject/web/example/route/: example.py
tests/fixture/testproject/web/example/view/: __init__.py  example.py
tests/fixture/tests/: answers.yml
tests/fixture/tests/scripts/: init-fixture.sh  test-all.sh  test-update.sh  validate-project.sh
tests/scripts/: init-fixture.sh  test-fresh.sh  test-update.sh  validate-project.sh  validate-templates.sh
{{ module_name }}/cli/: __main__.py.jinja  example.py.jinja  web.py.jinja
{{ module_name }}/core/: __init__.py.jinja  di.py.jinja
{{ module_name }}/core/config/: base.py.jinja  (+4 more)
{{ module_name }}/lib/: cli.py.jinja  sheets.py.jinja  util.py.jinja
{{ module_name }}/model/: __init__.py.jinja  id.py.jinja  {% yield model from models %}{{ model.table_name }}{% endyield %}.py.jinja
{{ module_name }}/storage/: __init__.py.jinja  table.py.jinja  {% yield model from models %}{{ model.table_name }}{% endyield %}.py.jinja
(+33 files in other folders)
