[project]
name = "testproject"
description = "..."
dynamic = [ "version" ]
authors = [
    {name = "Jesse Dhillon", email = "jesse@dhillon.com" },
]
dependencies = [
    "alembic~=1.14.0",
    "ansible~=11.1.0",
    "click~=8.1.0",
    "colorlog~=6.9.0",
    "dependency-injector~=4.45.0",
    "fastapi~=0.115.0",
    "keyctl~=0.5.0",
    "psycopg[binary]~=3.2.0",
    "pydantic[email]~=2.10.0",
    "pydantic-settings~=2.7.0",
    "pygments~=2.18.0",
    "shortuuid~=1.0.13",
    "setuptools~=75.8.0",
    "types-Pygments==2.19.0.20250107",
    "uuid-utils~=0.10.0",
    "uvicorn~=0.34.0",
    "xdg~=6.0.0",
]

[project.optional-dependencies]
test = [
    "pytest~=8.3.0",
]
dev = [
    "jdbpp@git+ssh://git@github.com/jessedhillon/jdbpp.git@14ade861a42be37536cc2612d028a2ae2dc589c8",
    "google-api-python-client~=2.163.0",
    "google-api-python-client-stubs~=1.29.0",
    "isort~=6.0.0",
    "rpdb@git+ssh://git@github.com/incognita-labs/rpdb.git@v0.2.1",
    "sql_formatter~=0.6.0",
]

[project.scripts]
testproject-cli = "testproject.cli.__main__:execute_command"

[tool.setuptools]
packages = [ "testproject" ]

[tool.setuptools.dynamic]
version.attr = "testproject.__version__"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--strict-markers -svx --pdbcls=jdbpp:Pdb"
filterwarnings = [
  "ignore:.*type_params.*ForwardRef._evaluate.*:DeprecationWarning:pydantic\\.v1\\.typing"
]

[tool.pyright]
exclude = [
  "testproject/typings/",
  "**/node_modules/**",
  "**/.venv/**",
]
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"
stubPath = "testproject/typings/"

reportUnusedImport = false  # let ruff catch this
reportUnusedVariable = false  # let ruff catch this

# WARN: these would nice to have, but require better typings for dependency-injector (or lots of silencing)
reportUnknownParameterType = true
reportUnknownArgumentType = true
reportUnknownLambdaType = true
reportUnknownVariableType = true
reportUnknownMemberType = false
reportMissingTypeStubs = false

[tool.ruff]
exclude = [
  "/typings/"
]
line-length = 120
lint.select = [ "E", "F", "B", "T" ]
lint.extend-ignore = [
    "I",
    "B008"  # calling function in parameter list
]
preview = true
target-version = "py313"

[tool.ruff.lint.per-file-ignores]
"/model/id.py" = ["E302"]

[tool.black]
line-length = 120
target-version = ["py313"]
force-exclude = 'testproject/typings/*'
skip-string-normalization = true

[tool.isort]
line_length = 120
multi_line_output = 2  # HANGING_INDENT
skip_glob = [
    "testproject/typings/**/*.pyi"
]
